--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2ab3d92cf
-	base = 03df29b0f
+	base = 04e0ec002
 	trim = shape_msgs
-	trimbase = 
+	trimbase = 03df29b0f
