--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2ab3d92cf
-	base = 8f520ebe7
+	base = b45aea591
 	trim = nav_msgs
-	trimbase = 
+	trimbase = 8f520ebe7
