--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2ab3d92cf
-	base = f4967344a
+	base = 19b360042
 	trim = std_msgs
-	trimbase = 
+	trimbase = f4967344a
