--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2ab3d92cf
-	base = b78cacc95
+	base = 712c8071b
 	trim = sensor_msgs_py
-	trimbase = 
+	trimbase = b78cacc95
