--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2ab3d92cf
-	base = b3da58604
+	base = 9817e3509
 	trim = std_srvs
-	trimbase = 
+	trimbase = b3da58604
