--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2ab3d92cf
-	base = 985eeff3a
+	base = 428f194b3
 	trim = trajectory_msgs
-	trimbase = 
+	trimbase = 985eeff3a
