--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2ab3d92cf
-	base = 5c14990e1
+	base = 0c3b61e02
 	trim = stereo_msgs
-	trimbase = 
+	trimbase = 5c14990e1
