--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2ab3d92cf
-	base = 76792f2dd
+	base = 0cd2a14e0
 	trim = geometry_msgs
-	trimbase = 
+	trimbase = 76792f2dd
