--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2ab3d92cf
-	base = 871d0b9f8
+	base = 8c05cf86e
 	trim = common_interfaces
-	trimbase = 
+	trimbase = 871d0b9f8
