--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2ab3d92cf
-	base = 8edf8914a
+	base = e1551bb70
 	trim = diagnostic_msgs
-	trimbase = 
+	trimbase = 8edf8914a
