--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e82db3643
-	base = 57bc8d53b
+	base = 98a10da7e
 	trim = sensor_msgs
-	trimbase = 
+	trimbase = 57bc8d53b
