--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e82db3643
-	base = c1e9b6493
+	base = ff679bc96
 	trim = visualization_msgs
-	trimbase = 
+	trimbase = c1e9b6493
