--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e82db3643
-	base = 6a3861208
+	base = ac0941aa9
 	trim = std_srvs
-	trimbase = 
+	trimbase = 6a3861208
