--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e82db3643
-	base = de9c05432
+	base = 6f09dc8a1
 	trim = std_msgs
-	trimbase = 
+	trimbase = de9c05432
