--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e82db3643
-	base = 4e4cd7816
+	base = 8bf2e6d34
 	trim = trajectory_msgs
-	trimbase = 
+	trimbase = 4e4cd7816
