--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e82db3643
-	base = 77f705fdc
+	base = a1cb891b2
 	trim = common_interfaces
-	trimbase = 
+	trimbase = 77f705fdc
