--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e82db3643
-	base = 8e5bf9485
+	base = b2d16b39c
 	trim = diagnostic_msgs
-	trimbase = 
+	trimbase = 8e5bf9485
