--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e82db3643
-	base = b0824de82
+	base = 99507922b
 	trim = nav_msgs
-	trimbase = 
+	trimbase = b0824de82
