--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e82db3643
-	base = ca510dfc7
+	base = 621b3927d
 	trim = shape_msgs
-	trimbase = 
+	trimbase = ca510dfc7
