--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e82db3643
-	base = f0addbfd3
+	base = 08b80436f
 	trim = sensor_msgs_py
-	trimbase = 
+	trimbase = f0addbfd3
