--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e82db3643
-	base = 030d43380
+	base = 2d6de5f71
 	trim = stereo_msgs
-	trimbase = 
+	trimbase = 030d43380
