--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e82db3643
-	base = e08a5062d
+	base = bbf5114e2
 	trim = geometry_msgs
-	trimbase = 
+	trimbase = e08a5062d
