--- a/geometry_msgs/CMakeLists.txt
+++ b/geometry_msgs/CMakeLists.txt
@@ -30,6 +30,7 @@ set(msg_files
   "msg/PolygonInstanceStamped.msg"
   "msg/PolygonStamped.msg"
   "msg/Pose.msg"
+  "msg/Pose2D.msg"
   "msg/PoseArray.msg"
   "msg/PoseStamped.msg"
   "msg/PoseWithCovariance.msg"
