--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 79f192450
-	base = 020ab945f
+	base = b2c12951f
 	trim = sensor_msgs
-	trimbase = 
+	trimbase = 020ab945f
