--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 79f192450
-	base = 5750e8fe5
+	base = 4922c6e0f
 	trim = visualization_msgs
-	trimbase = 
+	trimbase = 5750e8fe5
