--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 79f192450
-	base = 25ddb82e9
+	base = 5c9f7abbe
 	trim = std_srvs
-	trimbase = 
+	trimbase = 25ddb82e9
