--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 79f192450
-	base = 4ac3bd756
+	base = 68e51f0ad
 	trim = std_msgs
-	trimbase = 
+	trimbase = 4ac3bd756
