--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 79f192450
-	base = b58461b3c
+	base = 5f15b3c50
 	trim = trajectory_msgs
-	trimbase = 
+	trimbase = b58461b3c
