--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 79f192450
-	base = d5e418a17
+	base = c6f4c85d1
 	trim = actionlib_msgs
-	trimbase = 
+	trimbase = d5e418a17
