--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 79f192450
-	base = 06d16473f
+	base = 1934286aa
 	trim = common_interfaces
-	trimbase = 
+	trimbase = 06d16473f
