--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 79f192450
-	base = c91a1cfce
+	base = 20368f056
 	trim = diagnostic_msgs
-	trimbase = 
+	trimbase = c91a1cfce
