--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 79f192450
-	base = 617d6fe7f
+	base = 58918cf74
 	trim = nav_msgs
-	trimbase = 
+	trimbase = 617d6fe7f
