--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 79f192450
-	base = ef7db9457
+	base = ef5fed1f5
 	trim = shape_msgs
-	trimbase = 
+	trimbase = ef7db9457
