--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 79f192450
-	base = 989f85a9a
+	base = 08612cbe9
 	trim = sensor_msgs_py
-	trimbase = 
+	trimbase = 989f85a9a
