--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 79f192450
-	base = 8f23e17d6
+	base = adc555a9c
 	trim = stereo_msgs
-	trimbase = 
+	trimbase = 8f23e17d6
