--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 79f192450
-	base = f58067cae
+	base = 17a89bae2
 	trim = geometry_msgs
-	trimbase = 
+	trimbase = f58067cae
