--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0bbe8d263
-	base = c5ef7f076
+	base = ab223c60c
 	trim = diagnostic_msgs
-	trimbase = 
+	trimbase = c5ef7f076
