--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0bbe8d263
-	base = a6c07c906
+	base = b674b5b51
 	trim = nav_msgs
-	trimbase = 
+	trimbase = a6c07c906
