--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0bbe8d263
-	base = 86a5174af
+	base = 00d17dea3
 	trim = common_interfaces
-	trimbase = 
+	trimbase = 86a5174af
