--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0bbe8d263
-	base = 6d412e65e
+	base = a84d25809
 	trim = geometry_msgs
-	trimbase = 
+	trimbase = 6d412e65e
