--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0bbe8d263
-	base = 120a6e3ba
+	base = bda6ec70e
 	trim = trajectory_msgs
-	trimbase = 
+	trimbase = 120a6e3ba
