--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0bbe8d263
-	base = a8ff3c988
+	base = eaf24e705
 	trim = stereo_msgs
-	trimbase = 
+	trimbase = a8ff3c988
