--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0bbe8d263
-	base = f65473ab2
+	base = 0e4a8f05b
 	trim = std_msgs
-	trimbase = 
+	trimbase = f65473ab2
