--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0bbe8d263
-	base = afcdb5e23
+	base = 8643c02b4
 	trim = shape_msgs
-	trimbase = 
+	trimbase = afcdb5e23
