--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0bbe8d263
-	base = fafbef3ee
+	base = bcd0fabf4
 	trim = visualization_msgs
-	trimbase = 
+	trimbase = fafbef3ee
