--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0bbe8d263
-	base = 60bddcdff
+	base = 032755d26
 	trim = std_srvs
-	trimbase = 
+	trimbase = 60bddcdff
