--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0bbe8d263
-	base = 6d2319b6d
+	base = da341b344
 	trim = sensor_msgs_py
-	trimbase = 
+	trimbase = 6d2319b6d
