--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0bbe8d263
-	base = b4712caaf
+	base = 757742344
 	trim = sensor_msgs
-	trimbase = 
+	trimbase = b4712caaf
